change adddistance
