# docs/swagger.json
@@ -1283,6 +1283,9 @@
                 "client_phone": {
                     "type": "string"
                 },
+                "distance": {
+                    "type": "integer"
+                },
                 "driver_phone": {
                     "type": "string"
                 },
@@ -1311,23 +1314,38 @@
                 },
                 "driver_id": {
                     "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "isDeleted": {
-                    "type": "boolean"
                 }
             }
         },
         "models.Order": {
             "type": "object",
             "properties": {
+                "all_price": {
+                    "type": "integer"
+                },
+                "client_address": {
+                    "type": "string"
+                },
+                "client_phone": {
+                    "type": "string"
+                },
+                "distance": {
+                    "type": "integer"
+                },
+                "driver_phone": {
+                    "type": "string"
+                },
                 "from": {
                     "type": "string"
                 },
                 "into": {
                     "type": "string"
+                },
+                "is_response": {
+                    "type": "boolean"
+                },
+                "start_price": {
+                    "type": "integer"
                 }
             }
         },
@@ -1413,12 +1431,6 @@
                 },
                 "driver_id": {
                     "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "isDeleted": {
-                    "type": "boolean"
                 },
                 "user": {
                     "$ref": "#/definitions/models.User"
